samples/_failures_safe/1761467052_25210f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99f5c714.c: In function ‘print_state’:
./samples/SAFE/__tmp_99f5c714.c:148:16: error: missing terminating " character
  148 |         printf("Error code:
      |                ^~~~~~~~~~~~
./samples/SAFE/__tmp_99f5c714.c:148:9: error: expected expression at end of input
  148 |         printf("Error code:
      |         ^~~~~~
./samples/SAFE/__tmp_99f5c714.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99f5c714.c:148:9: error: expected declaration or statement at end of input
